# workshop-viejo

./: LICENSE  README.md  Vagrantfile  auto_install.sh  cabal.config  workshop1.cabal
csvs/: episode.csv  utterance.csv
src/: Main.hs
src/App/: Csv.hs  Join.hs  Json.hs  Model.hs
web/: index.html  main.js
