name:                workshop1
version:             0.1.0.0
synopsis:            Servidor REST con Scotty
license:             MIT
license-file:        LICENSE
author:              ealvarez
maintainer:          welcometothechango@gmail.com
homepage:            https://github.com/BsAsHaskell/workshop-1
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable workshop1
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , containers
                     , filepath
                     , text
                     , transformers
                     , cassava
                     , bytestring
                     , vector
                     , aeson
                     , scotty
